--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <title>Retheshgoud | Web developer</title>
       <link rel="icon" type="image/png" href="img/emojis/technologist.png" hreflang="en-us">
-      <meta property="og:title" content="Rethesh goud | Full stack developer" />
+      <meta property="og:title" content="Rethesh goud | Web developer" />
       <meta property="og:description" content="a CS graduate & a freelance web developer focused on building Adaptive designs & PWAs" />
       <meta property="og:type" content="website" />
       <meta property="og:url" content="https://retheshgoud.github.io/" />
@@ -15,7 +15,7 @@
       <meta name="description" content="a CS graduate & a freelance web developer focused on building Adaptive designs & PWAs">
       <meta name="keywords" content="developer, development, web, rethesh goud, India, javascript, hyderabad">
       <meta name="google-site-verification" content="n_Xvt_zytXkh2yZESaksPZe_e1rZGUQceUDCprlY3aA" />
-      <meta itemprop="name" content="Rethesh goud | Full stack developer">
+      <meta itemprop="name" content="Rethesh goud | Web developer">
       <meta itemprop="description" content="">
       <meta name="twitter:card" content="summary">
       <meta name="twitter:url" content="https://retheshgoud.github.io/">
