--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
          <header class="intro">
             <h1 class="intro__hello">Hello!<span class="emoji wave-hand animated"></h1>
             <h2 class="intro__tagline">I'm <span class="name">RetheshGoud</span>, a CS graduate & a freelance web developer focused on building Adaptive designs & PWAs  <span class="emoji technologist"></span> </h2>
-			<p class="intro-subtitle"><span class="text-slider-items">I build things for the Web,responsive,open source tools</span></span><strong class="text-slider"></strong></p>
+			<p class="intro-subtitle"><span class="text-slider-items">I build things for the Web,based in Hyderabad,India &#128205;,</span></span><strong class="text-slider"></strong></p>
             <h3 class="intro__contact"> <span>Get in touch </span> <span class="emoji pointer"></span> <span> <a href="mailto:rethesh.goud7@gmail.com" target="_blank" class="highlight-link">rethesh.goud7@gmail.com</a> </span> </h3>
          </header>
          <section class="section background">
