--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         
 		 <div class="resume_container">
   <div class="child">
-  <a href="https://retheshgoud.github.io/resume.pdf" target="_blank" class="arrow-link">View My Resume</a>
+  <a href="https://retheshgoud.github.io/Rethesh_resume.pdf" target="_blank" class="arrow-link">View My Resume</a>
   </div>
   </div>	
 		</body>
